--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19191,5 +19191,32 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Roll up your sleeves to unblock access to the zone and maybe gain access to its riches...</target>
       </segment>
     </unit>
+    <unit id="nJ50IDM" name="82f2b0d">
+      <notes>
+        <note category="german">Du kannst nicht flüchten, da du keine Aktionspunkte mehr übrig hast. Echt schade...</note>
+      </notes>
+      <segment>
+        <source>Du kannst nicht flüchten, da du keine Aktionspunkte mehr übrig hast. Echt schade...</source>
+        <target>You cannot make a run for it, you have no action points left. Shame...</target>
+      </segment>
+    </unit>
+    <unit id="5daVnSF" name="141df45">
+      <notes>
+        <note category="german">Du kannst nicht kämpfen, da du keine Aktionspunkte mehr übrig hast. Wie schade...</note>
+      </notes>
+      <segment>
+        <source>Du kannst nicht kämpfen, da du keine Aktionspunkte mehr übrig hast. Wie schade...</source>
+        <target>You cannot fight, you have no action points left. Shame...</target>
+      </segment>
+    </unit>
+    <unit id="RllpyIm" name="In einer von den Zombies kontrollierten Zone ist das nicht möglich!">
+      <notes>
+        <note category="german">In einer von den Zombies kontrollierten Zone ist das nicht möglich!</note>
+      </notes>
+      <segment>
+        <source>In einer von den Zombies kontrollierten Zone ist das nicht möglich!</source>
+        <target>It is impossible to do this in a zone controlled by zombies!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
