FR Translation correction for useless Breakthrough message

--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -3409,7 +3409,7 @@
       </notes>
       <segment>
         <source>Das kannst du nicht tun während du umzingelt bist...</source>
-        <target>Vous ne pouvez pas faire ça pendant que vous êtes entouré...</target>
+        <target>Vous n'avez pas besoin de cela pour le moment...</target>
       </segment>
     </unit>
     <unit id="L22kxoh" name="f3e008d">
