ES translation : Town creator

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -2374,7 +2374,7 @@
       </notes>
       <segment>
         <source>Ersteller</source>
-        <target>Ersteller</target>
+        <target>Creador</target>
       </segment>
     </unit>
     <unit id="Fz9FcFZ" name="Stadt ansehen">
