EN Translation when you try to make an escort drink a poisoned ration

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -17000,7 +17000,7 @@
       </notes>
       <segment>
         <source>Der Bürger weigert sich, dies zu tun...</source>
-        <target>Der Bürger weigert sich, dies zu tun...</target>
+        <target>Vous demandez à ce citoyen de boire avant de continuer, mais il vous répond qu'il n'a plus rien à avaler sur lui...</target>
       </segment>
     </unit>
     <unit id="uh49WWx" name="cea913a">
