ES translation expedition tab fix: Lenght means Duración/Longitud according to context.

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -17608,7 +17608,7 @@
       </notes>
       <segment>
         <source>Dauer</source>
-        <target>Duración</target>
+        <target>Long.</target>
       </segment>
     </unit>
     <unit id="mZIzUeE" name="von %citizen%">
