ES translation use the full world to attack

--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -3193,7 +3193,7 @@
       </notes>
       <segment>
         <source>Waffe einsetzen</source>
-        <target>Atac. con</target>
+        <target>Atacar con</target>
       </segment>
     </unit>
     <unit id="LNBNFk1" name="Zum Glück sind hier keine Zombies...">
