--- a/translations/ghost.de.xlf
+++ b/translations/ghost.de.xlf
@@ -1414,5 +1414,59 @@
         <target>...und mit 39 Mitbürgern in der Hölle schmoren</target>
       </segment>
     </unit>
+    <unit id="ilHQ7qt" name="Das Leben nach dem Tod">
+      <notes>
+        <note category="german">Das Leben nach dem Tod</note>
+      </notes>
+      <segment>
+        <source>Das Leben nach dem Tod</source>
+        <target>Das Leben nach dem Tod</target>
+      </segment>
+    </unit>
+    <unit id="s0KqeMJ" name="Meine Seele ansehen">
+      <notes>
+        <note category="german">Meine Seele ansehen</note>
+      </notes>
+      <segment>
+        <source>Meine Seele ansehen</source>
+        <target>Meine Seele ansehen</target>
+      </segment>
+    </unit>
+    <unit id="_pEJUyq" name="Spendenseite aufrufen">
+      <notes>
+        <note category="german">Spendenseite aufrufen</note>
+      </notes>
+      <segment>
+        <source>Spendenseite aufrufen</source>
+        <target>Spendenseite aufrufen</target>
+      </segment>
+    </unit>
+    <unit id="lrar0xr" name="Willkommen in der Hölle!">
+      <notes>
+        <note category="german">Willkommen in der Hölle!</note>
+      </notes>
+      <segment>
+        <source>Willkommen in der Hölle!</source>
+        <target>Willkommen in der Hölle!</target>
+      </segment>
+    </unit>
+    <unit id="7zJqkQY" name="34025a5">
+      <notes>
+        <note category="german">Du bist dabei, dich mit 39 anderen armen Seelen einer Stadt anzuschließen, mit dem Ziel, so lange wie möglich zu überleben.</note>
+      </notes>
+      <segment>
+        <source>Du bist dabei, dich mit 39 anderen armen Seelen einer Stadt anzuschließen, mit dem Ziel, so lange wie möglich zu überleben.</source>
+        <target>Du bist dabei, dich mit 39 anderen armen Seelen einer Stadt anzuschließen, mit dem Ziel, so lange wie möglich zu überleben.</target>
+      </segment>
+    </unit>
+    <unit id="29U26Sd" name="Spiel betreten">
+      <notes>
+        <note category="german">Spiel betreten</note>
+      </notes>
+      <segment>
+        <source>Spiel betreten</source>
+        <target>Spiel betreten</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
