--- a/translations/soul.es.xlf
+++ b/translations/soul.es.xlf
@@ -2782,5 +2782,50 @@
         <target>Recompensas</target>
       </segment>
     </unit>
+    <unit id="hI27y3h" name="Hat dir dein letztes Leben gefallen?">
+      <notes>
+        <note category="german">Hat dir dein letztes Leben gefallen?</note>
+      </notes>
+      <segment>
+        <source>Hat dir dein letztes Leben gefallen?</source>
+        <target>Hat dir dein letztes Leben gefallen?</target>
+      </segment>
+    </unit>
+    <unit id=".XNMg8S" name="92447f8">
+      <notes>
+        <note category="german">MyHordes wird von einem unabhängigen Team von Programmierern in deren Freizeit entwickelt.</note>
+      </notes>
+      <segment>
+        <source>MyHordes wird von einem unabhängigen Team von Programmierern in deren Freizeit entwickelt.</source>
+        <target>MyHordes wird von einem unabhängigen Team von Programmierern in deren Freizeit entwickelt.</target>
+      </segment>
+    </unit>
+    <unit id="JbPwhWn" name="ae00547">
+      <notes>
+        <note category="german">Wir sind ein Teil des EternalTwin-Projektes, welches es sich zur Aufgabe gemacht hat die Browserspiele von MotionTwin am Leben zu erhalten.</note>
+      </notes>
+      <segment>
+        <source>Wir sind ein Teil des EternalTwin-Projektes, welches es sich zur Aufgabe gemacht hat die Browserspiele von MotionTwin am Leben zu erhalten.</source>
+        <target>Wir sind ein Teil des EternalTwin-Projektes, welches es sich zur Aufgabe gemacht hat die Browserspiele von MotionTwin am Leben zu erhalten.</target>
+      </segment>
+    </unit>
+    <unit id="GLZ2E_L" name="3c81098">
+      <notes>
+        <note category="german">Das Spiel ist komplett kostenlos - es gibt keine Bezahlinhalte, wir zeigen keine Werbung an und führen auch kein Nutzer-Tracking durch.</note>
+      </notes>
+      <segment>
+        <source>Das Spiel ist komplett kostenlos - es gibt keine Bezahlinhalte, wir zeigen keine Werbung an und führen auch kein Nutzer-Tracking durch.</source>
+        <target>Das Spiel ist komplett kostenlos - es gibt keine Bezahlinhalte, wir zeigen keine Werbung an und führen auch kein Nutzer-Tracking durch.</target>
+      </segment>
+    </unit>
+    <unit id="E6_xVpY" name="8fe14b8">
+      <notes>
+        <note category="german">Wenn dir MyHordes gefällt und du uns unterstützen möchtest, kannst du dies mit einer Spende an das EternalTwin Projekt tun.</note>
+      </notes>
+      <segment>
+        <source>Wenn dir MyHordes gefällt und du uns unterstützen möchtest, kannst du dies mit einer Spende an das EternalTwin Projekt tun.</source>
+        <target>Wenn dir MyHordes gefällt und du uns unterstützen möchtest, kannst du dies mit einer Spende an das EternalTwin Projekt tun.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
