ES translation : Unlock bank abuse in admin menu

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -2752,7 +2752,7 @@
       </notes>
       <segment>
         <source>Banksperre aufheben</source>
-        <target>Banksperre aufheben</target>
+        <target>Quitar el anti abuso del almacén</target>
       </segment>
     </unit>
     <unit id="HBKEVAD" name="Durst aufheben">
