ES translation : Remove engagement of all players in admin menu

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -2770,7 +2770,7 @@
       </notes>
       <segment>
         <source>Alle Spieler entkoppeln</source>
-        <target>Alle Spieler entkoppeln</target>
+        <target>Desvincular el alma de todos los jugadores</target>
       </segment>
     </unit>
     <unit id="t5vj7sC" name="Alle Spieler koppeln">
