ES translation : set well level in admin menu

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -3013,7 +3013,7 @@
       </notes>
       <segment>
         <source>Brunnen-Füllstand setzen</source>
-        <target>Brunnen-Füllstand setzen</target>
+        <target>Ajustar el nivel del pozo</target>
       </segment>
     </unit>
     <unit id="2xHk8Wn" name="Alle Gebäude freischalten">
