--- a/translations/ghost.fr.xlf
+++ b/translations/ghost.fr.xlf
@@ -1440,7 +1440,7 @@
       </notes>
       <segment>
         <source>Du bist dabei, dich mit 39 anderen armen Seelen einer Stadt anzuschließen, mit dem Ziel, so lange wie möglich zu überleben.</source>
-        <target>Tu es sur le point de rejoindre une ville avec 39 autres âmes maudites, dans le but de survivre le plus longtemps possible.</target>
+        <target>Vous êtes sur le point de rejoindre une ville avec 39 autres pauvres âmes, dans le but de survivre le plus longtemps possible.</target>
       </segment>
     </unit>
     <unit id="29U26Sd" name="Spiel betreten">
